<resources>
    <string name="app_name">Kings league</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="has_oblidat_la_contrasenya">Has oblidat la contrasenya?</string>
    <string name="registrarse">REGISTRAR-SE</string>
    <string name="escriu_contrasenya">Escriu contrasenya</string>
    <string name="escriu_gmail">Escriu Gmail</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="accedir">ACCEDIR</string>
    <string name="acceptar">ACEPTAR</string>
    <string name="email" translatable="false">Email</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="introdueix_email">introdueix_email</string>
    <string name="cancelar">CANCELAR</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="nom_usuari">Nom Usuari</string>
    <string name="gmail" translatable="false">Gmail</string>
    <string name="repetir_contrasenya">Repetir Contrasenya</string>
    <string name="logo_splash_screen" translatable="false">Logo Splash screen</string>
    <string name="benvingut_a_la_kings_league">BENVINGUT A LA KINGS LEAGUE</string>
    <string name="veure_jugadors">VEURE JUGADORS</string>
    <string name="veure_classificacio">Veure classificació</string>
    <string name="item" translatable="false">Item</string>
    <string name="classificaci">CLASSIFICACIÓ</string>
    <string name="tornar">TORNAR</string>
    <string name="nom">Nom</string>
    <string name="modificar_jugadors">Modificar jugadors</string>
    <string name="modificar_classificacio">MODIFICAR CLASSIFICACIO</string>
    <string name="puntuacio">Puntuacio</string>
    <string name="introdueix_puntuacio">Introdueix puntuacio</string>
    <string name="jugadors">Jugadors</string>
    <string name="introdueix_nom_jugador">Introdueix el nom del jugador</string>
    <string name="modificar_equips">Modificar equips</string>
    <string name="jugador">JUGADOR</string>
    <string name="crear_jugador">CREAR JUGADOR</string>
    <string name="eliminar_jugador">ELIMINAR JUGADOR</string>
    <string name="introdueix_el_nom_del_equip">Introdueix el nom de l equip</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="crear" translatable="false">CREAR</string>
    <string name="modificar" translatable="false">MODIFICAR</string>
    <string name="equip">EQUIP</string>
    <string name="crear_equips">CREAR EQUIPS</string>
    <string name="eliminar_equips">ELIMINAR EQUIPS</string>
    <string name="modificar_puntuacio">MODIFICAR PUNTUACIO</string>
    <string name="foto_de_perfil" translatable="false">Foto de perfil</string>
    <string name="guardar" translatable="false">GUARDAR</string>
    <string name="configuracio">Configuracio</string>
    <string name="tancar_sessio">TANCAR SESSIO</string>
    <string name="vine_al_camp">VINE AL CAMP</string>
    <string name="canviar_foto">CANVIAR FOTO</string>
    <string name="nom_del_equip">Nom del equip</string>
    <string name="veure">VEURE</string>
    <string name="nom_equip">Nom equip</string>
    <string name="_555" translatable="false">555</string>
    <string name="nom_jugador">Nom Jugador</string>
    <string name="correu_error">El correu i/o la contrasenya és incorrecte</string>
    <string name="canviar_contrasenya_alert">S\'ha enviat un correu per canviar la contrasenya</string>
    <string name="canviar_contrasenya_error">No s\'ha pogut enviar el correu</string>
    <string name="introduir_correu_alert">Cal introduir un correu</string>
    <string name="introduir_contrasenya_alert">Cal introduir una contrasenya</string>
    <string name="introduir_contrasenya_repetida_alert">Cal introduir la contrasenya repetida</string>
    <string name="introduir_contrasenya_repetida_correcte_alert">Cal introduir la contrasenya correcta</string>
    <string name="lequip_no_existeix_alert">L\'equip no existeix</string>
    <string name="cal_introduir_equip">Cal introduïr un nom a l\'equip</string>
    <string name="equip_ja_esta_creat_alert">L\'equip no s\'ha afegit perquè ja esta creat</string>
    <string name="lequip_sha_creat_alert">L\'equip s\'ha afegit correctament</string>
    <string name="lequip_no_sha_afegit_alert">L\'equip no s\'ha afegit</string>
    <string name="cal_introduir_nom_al_jugador_alert">Cal introduïr un nom al jugador</string>
    <string name="cal_introduir_nom_al_equip_alert">Cal introduïr un nom per l\'equip</string>
    <string name="crear_jugador_alert">El jugador s\'ha creat correctament</string>
    <string name="introduir_jugador_alert">Cal introduïr un nom al jugador</string>
    <string name="introduir_nom_equip_alert">Cal introduïr un nom per l\'equip</string>
    <string name="eliminar_jugador_alert">El jugador s\'ha eliminat correctament</string>
    <string name="jugador_no_existeix_alert">El jugador amb aquest nom no existeix a l\'equip</string>
    <string name="equip_no_existeix_alert">L\'equip no existeix</string>
    <string name="introduir_nom_equip">Cal introduïr un nom a l\'equip</string>
    <string name="equip_eliminat_alert">L\'equip s\'ha eliminat correctament</string>
    <string name="introduir_puntuacio_alert">Cal introduïr una puntuacio</string>
    <string name="la_puntuacio_sha_modificat_alert">La puntuacio s\'ha modificat correctament</string>
    <string name="lupa_per_buscar">lupa per buscar</string>
    <string name="s_una_imatge_on_surt_una_silueta_de_persona">És una imatge on surt una silueta de persona</string>
    <string name="surt_un_lle_que_s_el_logotip_de_l_aplicaci">surt un lleó que és el logotip de l\'aplicació</string>
    <string name="fotoguardadaalert">La imatge s\'ha guardat</string>
    <string name="equipnom" translatable="false">Equip</string>
    <string name="_0" translatable="false">0</string>
    <string name="jugador_no_afegit_alert">El jugador no s\'ha afegit perquè ja esta creat</string>
    <string name="gestionar_jugadors">GESTIONAR JUGADORS</string>
    <string name="gestionar_equips">GESTIONAR EQUIPS</string>
    <string name="elregistrehafallat">El registre ha fallat</string>
    <string name="emailincorrecte">email incorrecte!!</string>
    <string name="calintroduirunnomalequip">Cal introduïr un nom a l\'equip</string>
    <string name="eliminar_jugadors">ELIMINAR JUGADORS</string>

</resources>