<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracio">

    <TextView
        android:id="@+id/titol_configuracio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="130dp"
        android:text="@string/configuracio"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTancarSessio"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/tancar_sessio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titol_configuracio" />


    <Button
        android:id="@+id/btnGeolocalitzacio"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/vine_al_camp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTancarSessio" />

    <Button
        android:id="@+id/btnFotoPerfil"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:textSize="21sp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/canviar_foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGeolocalitzacio" />

    <Button
        android:id="@+id/btn_tornar_configuracio"
        style="@style/Widget.ComunicaProdis.ButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="150dp"
        android:text="@string/tornar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>