<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EquipsSafeArgs">

    <TextView
        android:id="@+id/TitolEquip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/equipnom"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tornar_equipsSafeArgs"
        style="@style/Widget.ComunicaProdis.ButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tornar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/puntuacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/puntuacio"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitolEquip" />

    <TextView
        android:id="@+id/jugadorsSafe"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/jugadors"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puntuacio" />

    <TextView
        android:id="@+id/puntuacionumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/puntuacio"
        app:layout_constraintTop_toBottomOf="@+id/TitolEquip" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jugadorsSafe" />


</androidx.constraintlayout.widget.ConstraintLayout>