<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuEquips">

    <TextView
        android:id="@+id/titol_menu_equips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="130dp"
        android:text="@string/equip"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCrearEquips"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/crear_equips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titol_menu_equips" />


    <Button
        android:id="@+id/btnEliminarEquips"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/eliminar_equips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearEquips" />

    <Button
        android:id="@+id/btnModificarPuntuacio"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/modificar_puntuacio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarEquips" />
</androidx.constraintlayout.widget.ConstraintLayout>


