<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/constraintlayoutTherme"
    tools:context=".Jugadors">

    <TextView
        android:id="@+id/TitolJugadors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/veure_jugadors"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tornar_jugadors"
        style="@style/Widget.ComunicaProdis.ButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/tornar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nomJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/nom_del_equip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitolJugadors" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomJugadorTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/nomJugador"
        tools:layout_editor_absoluteX="40dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editNomJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/nom"
        android:minHeight="48dp"
        android:textColor="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomJugador"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/btn_veure_jugadors"
        style="@style/Widget.ComunicaProdis.ButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/blue"
        android:text="@string/veure"
        app:layout_constraintBottom_toTopOf="@+id/btn_tornar_jugadors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

