<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuJugadors">

    <TextView
        android:id="@+id/titol_menu_jugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="130dp"
        android:text="@string/jugador"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCrearJugador"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/crear_jugador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titol_menu_jugador" />


    <Button
        android:id="@+id/btnEliminarJugador"
        style="@style/Widget.ComunicaProdis.ButtonEnter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/eliminar_jugador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearJugador" />
</androidx.constraintlayout.widget.ConstraintLayout>